plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'io.freefair.lombok' version '8.7.1'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

repositories {
    mavenLocal()
    maven {
        name = "Aliyun Public"
        url = "https://maven.aliyun.com/repository/public"
    }
    maven {
        name = "Aliyun Central"
        url = "https://maven.aliyun.com/repository/central"
    }
    mavenCentral()
    maven { url = 'https://maven.minecraftforge.net' }
    maven {
        name = "Modrinth Maven"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
    maven {
        name = "CurseForge Maven"
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Ithundxr Maven"
        url = "https://maven.ithundxr.dev/snapshots"
    }
    maven {
        name "firstdarkdev"
        url "https://maven.firstdarkdev.xyz/snapshots"
    }
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" }
    maven { url = "https://maven.createmod.net" }
    maven {
        url "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroup("software.bernie.geckolib")
        }
    }
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        url 'https://jitpack.io'
        content {
            includeGroup "com.github.rtyley"
        }
    }
    maven { url "https://maven.shedaniel.me/" }
}

minecraft {
    mappings channel: 'official', version: minecraft_version
    copyIdeResources = true

    runs {
        client {
            workingDirectory project.file('run/client')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', file('build/createSrgToMcp/output.srg').absolutePath
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        aeGuide {
            parent runs.client
            property 'guideme.ae2.guide.sources', file('guidebook').absolutePath
            property 'guideme.ae2.guide.sourcesNamespace', 'neoecoae'
        }

        server {
            workingDirectory project.file('run/server')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', file('build/createSrgToMcp/output.srg').absolutePath
            args '--nogui'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run/data')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', file('build/createSrgToMcp/output.srg').absolutePath
            args '--mod', project.mod_id, '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    api fg.deobf("com.tterrag.registrate:Registrate:MC1.20-1.3.3")
    implementation fg.deobf("appeng:appliedenergistics2-forge:${ae2_version}")

    compileOnly("org.appliedenergistics:guideme:${guideme_version}:api")
    runtimeOnly fg.deobf("org.appliedenergistics:guideme:${guideme_version}")

    implementation fg.deobf("curse.maven:ldlib-626676:${ldlib_file_id}")
    compileOnly("dev.vfyjxf:taffy:${taffy_version}")

    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
    compileOnly fg.deobf("curse.maven:applied-mekanistics-574300:${appmek_file_id}")
    runtimeOnly fg.deobf("curse.maven:applied-mekanistics-574300:${appmek_file_id}")

    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
    runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
    compileOnly fg.deobf("dev.emi:emi-forge:${emi_version}")

    implementation fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")

    compileOnly("io.github.llamalad7:mixinextras-common:${mixinextras_version}")
    annotationProcessor("io.github.llamalad7:mixinextras-common:${mixinextras_version}")
    implementation("io.github.llamalad7:mixinextras-forge:${mixinextras_version}")
}

sourceSets.main.resources {
    srcDirs 'src/main/resources', 'src/generated/resources', 'src/guidebook/resources'
}

sourceSets.main.java {
    exclude 'cn/dancingsnow/neoecoae/integration/**'
    exclude 'cn/dancingsnow/neoecoae/mixins/**'
    exclude 'cn/dancingsnow/neoecoae/client/model/**'
    exclude 'cn/dancingsnow/neoecoae/client/all/NEBuiltinModels.java'
    exclude 'cn/dancingsnow/neoecoae/client/renderer/blockentity/ECOComputationCoolingControllerRenderer.java'
    exclude 'cn/dancingsnow/neoecoae/data/**'
    exclude 'cn/dancingsnow/neoecoae/recipe/*Builder.java'
    exclude 'cn/dancingsnow/neoecoae/all/NEDataComponents.java'
    exclude 'cn/dancingsnow/neoecoae/api/components/**'
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

processResources.dependsOn generateModMetadata
tasks.named('processResources', ProcessResources).configure {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : mod_id,
                "Specification-Vendor"    : mod_authors,
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : mod_authors,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs"            : "${mod_id}.mixins.json"
        ])
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.register('copyGuidebook', Copy) {
    group = 'build'

    from 'guidebook/'
    into 'src/guidebook/resources/assets/neoecoae/ae2guide'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.register('sourcesJar', Jar) {
    dependsOn delombok
    from delombok.outputs.files
    archiveClassifier = "sources"
}

artifacts {
    archives sourcesJar
}

lombok {
    version = "1.18.34"
}
